css/style.css
/* ... */
/* Work order form */
#form-work-order .input-time {
    width: 300px;
}
#form-work-order .route-title {
    font-size: 20px;
    margin-bottom: 10px;
}
#form-work-order .start-time, #form-work-order .estimates {
    margin-top: 5px;
}
#form-work-order .estimates > ul > li {
    margin-top: 20px;
    font-size: 13px;
}
@media screen {
    .print-only {
        display: none;
    }
}
@media print {
    .hide-print {
        display: none !important;
    }
    #form-work-order {
        font-size: 14px;
    }
    #form-work-order .legend {
        margin: 0 0 20px 0;
    }

    #adminmenuwrap,
    #erp-header,
    #wpfooter,
    #adminmenu,
    #wpadminbar,
    #adminmenuback,
    #wp-auth-check-wrap,
    [class$="-nag"]
    {
        display: none !important;
    }

    #erp-content {
        border: none;
    }
    #wpcontent {
        width: 100%;
        margin-left: 0;
    }
}
/* End work order form */
.table-tools.list-referral {
  width: 60%;
}

.n-p {
    padding: 0 0 0 0;
}
.estimate-total {
    font-size: 18px;
}
[ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
    display: none !important;
}

/* Sub-customer dropdown */
.selectize-dropdown, .selectize-input, .selectize-input input {
    font-family: "Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
}
.selectize-dropdown-content .sub.sub-level-1 {
    padding-left: 25px;
}
.selectize-dropdown-content .sub.sub-level-2 {
    padding-left: 35px;
}
.selectize-dropdown-content .sub.sub-level-3 {
    padding-left: 45px;
}
.selectize-dropdown-content .sub small {
    font-style: italic;
    float: right;
}
.form-route label {
    line-height: 30px;
}
#erp-content select.sort-by-select {
    height: 27px;
}
.form-route hr {
    margin: 0 0 10px 0;
}
.route-box-title {
    margin-top: 0;
    font-weight: 600;
    font-size: 15px;
    display: inline-block;
}
form.form-route {
    margin-top: 5px;
}
.lines-table .selectize-input {
    min-height: 28px !important;
    padding: 4px 10px;
}
div.toast {
    width: 350px;
}
li.line-empty {
    height: 10px;
}
div.queue-toolbar {
    margin-bottom: 10px;
    display: inline-block;
}
.worker-order-line input[type=checkbox] {
    float: left;
    margin-top: 5px;
    margin-right: 10px;
}
@media(min-width:1025px) {
    div.queue-toolbar {
        float: right;
    }
    .input-worker-order-line, .input-equipment-list {
        width: 700px;
    }
    .worker-order-line input[type=checkbox]{
        margin-top: 0px;
    }
}
@media(max-width:1024px) {
    .input-worker-order-line, .input-equipment-list {
        width: 85%;
    }
}

.worker-order-line.line-invisible input[type=text]{
    color: #BFBFBF;
}
.btn-show-truncated-details {
    cursor: pointer;
    color: #31708f;
}
.modal-body .form-group {
    margin-bottom: 5px;
}
.pagination {
    margin-top: 5px;
}
.selectize-control .selectize-input.disabled {
    opacity: 0.8;
}
.selectize-control .selectize-input.disabled:after {
    display: none;
}

